<resources>
    <string name="app_name">ActionBar Experiment</string>
    <string name="action_settings">Settings</string>

    <string name="ui_tabname_appetizer">appetizer</string>
    <string name="ui_tabname_entree">entree</string>
    <string name="ui_tabname_dessert">dessert</string>
    <string name="ui_tabname_dinner">dinner</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="radio_tab1_1">Nachos</string>
    <string name="radio_tab1_value1">5.99</string>
    <string name="radio_tab1_2">Crab Legs</string>
    <string name="radio_tab1_value2">9.99</string>
    <string name="radio_tab1_3">Bruschetta</string>
    <string name="radio_tab1_value3">7.99</string>

    <string name="radio_tab2_1">Hamburger</string>
    <string name="radio_tab2_value1">10.99</string>
    <string name="radio_tab2_2">Sausage and Peppers</string>
    <string name="radio_tab2_value2">12.99</string>
    <string name="radio_tab2_3">Ravioli</string>
    <string name="radio_tab2_value3">9.99</string>

    <string name="radio_tab3_1">Ice Cream</string>
    <string name="radio_tab3_value1">3.99</string>
    <string name="radio_tab3_2">Chocolate Cake</string>
    <string name="radio_tab3_value2">4.99</string>
    <string name="radio_tab3_3">Apple Pie</string>
    <string name="radio_tab3_value3">4.99</string>
</resources>
