<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/ui_tabname_dessert"
        android:orientation="horizontal"
        android:src="@drawable/snack"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:checkedButton="@+id/radioButton1">

        <RadioButton
            android:text="@string/radio_tab3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:layout_weight="1"
            style="@style/MyRadioButton" />

        <RadioButton
            android:text="@string/radio_tab3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1"
            style="@style/MyRadioButton" />

        <RadioButton
            android:text="@string/radio_tab3_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1"
            style="@style/MyRadioButton" />

    </RadioGroup>

    <TextView
        android:text="@string/radio_tab1_value1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        style="@style/MyTextView"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="400dp"/>

</RelativeLayout>
