<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">\

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/ui_tabname_entree"
        android:orientation="horizontal"
        android:src="@drawable/lunch"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:checkedButton="@+id/radioButton1">

        <RadioButton
            android:text="@string/radio_tab2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1"
            android:layout_weight="1"
            style="@style/MyRadioButton" />

        <RadioButton
            android:text="@string/radio_tab2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1"
            style="@style/MyRadioButton" />

        <RadioButton
            android:text="@string/radio_tab2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1"
            style="@style/MyRadioButton" />

    </RadioGroup>

</RelativeLayout>
